# loom

./: ARCHITECTURE.md  Cargo.toml  README.md
crates/loom-core/: Cargo.toml
crates/loom-core/src/: distribution.rs  event.rs  events.rs  lib.rs  named.rs  schema.rs  scoring.rs  simulation.rs  state.rs  traits.rs
crates/loom-store/: Cargo.toml
crates/loom-store/examples/: db_job_decision.rs  seed.rs  seed_template.rs
crates/loom-store/src/: event.rs  lib.rs  template.rs  timeline.rs
crates/loom-tui/: Cargo.toml
crates/loom-tui/src/: app.rs  main.rs  store.rs  ui.rs
examples/: career_path.rs  job_decision.rs
examples/configs/: attribute_schema.json  career_schedule.json  goal.json  job_decision.json  passives.json
examples/configs_financial/: attribute_schema.json  decisions.json  goal.json  passives.json
templates/: financial_planner.json  life_coach.json
