[package]
name = "loom-core"
version = "0.1.0"
edition = "2024"
description = "Loom decision engine — vector-state simulation, Monte Carlo scoring, Pareto tradeoff surfaces"
license = "MIT"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "job_decision"
path = "../../examples/job_decision.rs"
