[package]
name = "loom-store"
version = "0.1.0"
edition = "2024"
description = "Loom SQLite persistence — schemas, decisions, passives, goals, state snapshots"
license = "MIT"

[dependencies]
loom-core = { path = "../loom-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
