[package]
name = "loom-tui"
version = "0.1.0"
edition = "2024"
description = "Loom terminal exploration interface — fzf-style decision browser"
license = "MIT"

[dependencies]
loom-core = { path = "../loom-core" }
ratatui = "0.30.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
